# malakoi

./: Cargo.toml  README.md
.github/workflows/: count_tests.yml
src/: lib.rs
src/components/: component.rs  generate_approach.rs  generate_discount.rs  generate_div.rs  generate_inflate.rs  generate_mul.rs  generate_sub.rs  generate_sum.rs  mod.rs
tests/: approach.rs  discount.rs  divide.rs  inflate.rs  multiply.rs  subtract.rs  sum.rs
